karl package Changelog
======================

Unreleased
----------

- LP #503771: Fixed day links on calendar list view.

- LP #503523: AttributeError: 'CalendarEvent' object has no attribute 'color'

- LP #503450: Fixed that the hour and minute selectors on the add calendar
  event page would lose their all-day state if the user entered an end date
  that was before the start date.

- LP #503442: Fixed hardcoded year left in calendar week view template.

- LP #496331: Calendar list view now shows a paginated listing of upcoming
  events with 20 events per page.

- Merged svn+ssh://osi@osi.agendaless.com/home/osi/bfgsvn/karl/branches/formish
  branch, which replaces some form-based views with formish forms.

- LP #496381: Calendar event duration must be at least one minute.

- Added missing registration for IFileInfo adapter for ICommunityRootFolder.

- Fixed bug in evolve2 step that updated 'Last Activity' for every community.

- Added missing view registrations for mailin monitor utility.

- Fixed bug with attachments on mailin caused by a bogus assertion which would
  usually fail.

- Bug fix: Make sure acl's are properly set on profiles during import.

- LP #494582 Added opensearch support to people directory.  (Ported from OSI.)

- Bug fix: Make sure custom_folder_view uses get_layout_provider utility
  method.

- Explicit registration of an IFolderAddables is no longer required.  A
  suitable default is found if there is no registration.  Added
  'get_folder_addables' utility method.

- Created a default footer that just contains the offices listing component of
  OSI's footer.

- Bug fix: Allow add/edit forms for calendar event to still work if there is no
  category.  Categories are not used outside of the context of the calendar
  tool, and calendar events can appear in regular old folders in intranets.
  This allows to again create and edit events in the 'network-news' folder used
  in most intranets..
